--- a/finansial-app/package.json
+++ b/finansial-app/package.json
@@ -9,18 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@eslint/css": "^0.14.1",
+    "@eslint/json": "^0.14.0",
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4"
+    "prisma": "^6.19.0",
+    "tailwindcss": "^4.1.17"
   }
 }
