--- a/finansial-app/package.json
+++ b/finansial-app/package.json
@@ -18,6 +18,8 @@
     "@eslint/css": "^0.14.1",
     "@eslint/json": "^0.14.0",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.6",
     "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.1",
